change data .env

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="mongodb+srv://maurobarquinero:maurobarquinero@cluster0.lwyrfts.mongodb.net/nestjs?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://<USERNAME>:<PASSWORD>@cluster0.lwyrfts.mongodb.net/<DATABASE_NAME>?retryWrites=true&w=majority"
